Fix: z-index do menu mobile

--- a/src/components/Navbar/styles.module.css
+++ b/src/components/Navbar/styles.module.css
@@ -63,6 +63,7 @@
         align-items: start;
         height: 100vh;
         width: 100vw;
+        z-index: 10;
     }
 
     .mobileHeader {
